// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar unit test should validate match snapshot to Navbar component with theme 'Dark Mode 🌑' 1`] = `
<styled.nav
  data-testid="app-navbar"
>
  <styled.div>
    <NavbarButton
      theme={
        Object {
          "mode": "light",
        }
      }
    />
  </styled.div>
</styled.nav>
`;

exports[`Navbar unit test should validate match snapshot to Navbar component with theme 'Light Mode 🌕' 1`] = `
<styled.nav
  data-testid="app-navbar"
>
  <styled.div>
    <NavbarButton
      theme={
        Object {
          "mode": "dark",
        }
      }
    />
  </styled.div>
</styled.nav>
`;
